FE Linis TO:FIX User DB, UserProfile, User MyRents, UserMyListing, Archives. all mentioned, the Logout modal not showing and token is not getting deleted.

--- a/public/css/admin-viewprod.css
+++ b/public/css/admin-viewprod.css
@@ -171,6 +171,8 @@ nav ul {
     text-align: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     margin-left: 25px;
+    position: sticky;
+    top: 50px;
   }
   
   .h3pendingpost {
