--- a/public/css/view-product.css
+++ b/public/css/view-product.css
@@ -165,6 +165,8 @@ nav button {
     text-align: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     margin-left: 25px;
+    position: sticky;
+    top: 50px;
 }
 
 .pickdate {
